Tries fixing height on safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,6 +32,7 @@
     font-family: "Outfit", -apple-system, BlinkMacSystemFont, "Segoe UI",
       "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
       "Helvetica Neue", sans-serif;
+    height: 100lvh;
   }
 
   h1,
